--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div> 
+    <%= f.file_field :profile_photo %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
