--- a/app/assets/stylesheets/static_changes.scss
+++ b/app/assets/stylesheets/static_changes.scss
@@ -6,7 +6,7 @@ li {
   list-style: none;
 }
 
-.roast-tile{
+.roast-tile, .brew-tile {
   background-color: #DBC1B0 ;
   max-height: 700px;
   margin: 5rem 50px;
