--- a/app/assets/stylesheets/static_changes.scss
+++ b/app/assets/stylesheets/static_changes.scss
@@ -15,7 +15,16 @@ li {
   border-radius: 10px;
 }
 
-.main{
-  background-color: #99BEE3;
+h1 {
+  text-align: center;
 }
+
+.body {
+  background-color: #f0ead2;
+}
+
+.top-bar, .profile-photo {
+  background-color: #adc178;
+}
+
 
