--- a/app/assets/stylesheets/static_changes.scss
+++ b/app/assets/stylesheets/static_changes.scss
@@ -2,14 +2,18 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
+.body {
+  background-color: #f0ead2;
+}
+
 li {
   list-style: none;
 }
 
 .roast-tile, .brew-tile {
-  background-color: #DBC1B0 ;
+  background-color: #adc178 ;
   max-height: 700px;
-  margin: 5rem 50px;
+  margin: 5rem 400px;
   box-shadow: 1px 1px 5px 1px;
   padding: 1rem;
   border-radius: 10px;
@@ -19,12 +23,31 @@ h1 {
   text-align: center;
 }
 
-.body {
-  background-color: #f0ead2;
-}
 
-.top-bar, .profile-photo {
+.top-bar {
   background-color: #adc178;
 }
 
+h4 {
+  text-align: center;
+}
+.translucent-form-overlay {
+  // max-width: 700px;
+  // width: 100%;
+  margin: 5rem 90px;
+  background-color: rgba(173, 193, 120, 0.8);
+  padding: 20px;
+  color: #fefefe;
+}
 
+.translucent-form-overlay .columns.row {
+  display: block;
+}
+
+.translucent-form-overlay h4, .translucent-form-overlay label {
+  color: #fefefe;
+}
+
+.translucent-form-overlay input::-webkit-input-placeholder {
+  color: #8a8a8a;
+}
