--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head >
   <title>PoPro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
-<body class="main">
+<body class="body">
   
   <nav class="top-bar">
     <h1><a href="/">PoPro</a></h1>
@@ -14,11 +14,11 @@
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
-          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+          <li class="top-bar"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
             <%= image_tag current_user.profile_photo.url(:thumb) %>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Sign In', new_user_session_path %></li>
+          <li class="top-bar"><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <li class="top-bar"><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
     </section>
