--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <ul class="right">
         <%- if current_user -%>
           <li class="top-bar"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-            <%= image_tag current_user.profile_photo.url(:thumb) %>
+            <%# <%= image_tag current_user.profile_photo.url(:thumb) %>
         <%- else -%>
           <li class="top-bar"><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li class="top-bar"><%= link_to 'Sign In', new_user_session_path %></li>
