--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,18 +4,8 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "last name" %>
-  </div>
-
-  <div class="field">
     <%= f.label :username %><br />
-    <%= f.text_field :username, autocomplete: "username" %>
+    <%= f.text_field :username,  autofocus: true, autocomplete: "username" %>
   </div>
 
   <div class="field">
@@ -36,7 +26,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div> 
+  <div class="field"> 
+    <%= f.label :profile_photo, "Upload a Profile Photo" %> 
     <%= f.file_field :profile_photo %>
   </div>
 
