--- a/app/assets/stylesheets/static_changes.scss
+++ b/app/assets/stylesheets/static_changes.scss
@@ -3,7 +3,36 @@
 @import 'motion-ui/motion-ui';
 
 
+// .box {
+//   // margin:auto;
+//   // position: relative;
+//   width:220px;
+//   height:300px;
+//   padding: 1rem;
+//   box-sizing: border-box;
+//   border: solid 1px black;
+// }
+.alert {
+  text-align: center;
+}
+.box {
+  width: 300px;
+  height: 500px;
+  border: 1px solid black;
+  padding: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+// .square {
+//     border: solid blue 1px;
+//     padding-bottom: 30%;
 
+//     display: flex;                /* new */
+//     justify-content: center;      /* new */
+//     align-items: center;          /* new */
+// }
 .card {
   width: 350px;
 }
@@ -81,6 +110,9 @@ li {
   list-style: none;
 }
 
+.nav-links {
+  display: block;
+}
 .roast-tile, .brew-tile, .user{
   background-color: #adc178 ;
   box-shadow: 1px 1px 5px 1px;
@@ -88,7 +120,7 @@ li {
   border-radius: 10px;
 }
 
-h1, .user {
+nav, h1, .user {
   text-align: center;
 }
 
@@ -98,6 +130,7 @@ h1, .user {
 
 .top-bar {
   background-color: #adc178;
+  text-align: center;
 }
 
 h4 {
