--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head >
-  <title>PoPro</title>
+  <title>Cup of Joe Pro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
-<body class="body">
+<body class="body grid-container fluid">
   
   <nav class="top-bar">
-    <h1><a href="/">PoPro</a></h1>
-
+    <h1><a href="/">Cup of Joe Pro</a></h1>
+    <div class="nav-links">
+      <a href="/">HOME</a>
+      <a href="/brews">BREWS</a>
+      <a href="/roasts">ROASTS</a>
+      <a href="/roasts/new">ADD A ROAST</a>
+    </div>
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
@@ -25,8 +30,11 @@
   </nav>
 
   <%- flash.each do |key, value| -%>
-    <div class="flash flash-<%= key %>">
+    <div class="alert flash flash-<%= key %>">
+     <h2>
       <%= value %>
+     </h2> 
+     
     </div>
   <%- end -%>
 
