maintenance and style tweaks

--- a/app/assets/stylesheets/brewshow.scss
+++ b/app/assets/stylesheets/brewshow.scss
@@ -3,6 +3,13 @@
 @import 'motion-ui/motion-ui';
 
 
+
+ .brew-tile{
+  background-color: #adc178 ;
+  box-shadow: 1px 1px 5px 1px;
+  // padding: 1rem;
+  border-radius: 10px;
+}
 // .portfolio-resume-scrolling-container {
 //   margin-top: 20px;
 //   height: 400px;
