added geolocation feature and some styling and start of geocoding

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -10,7 +10,7 @@ $foundation-palette: (
 );
 $testing1: #fffb88;
 $page: #f0efeb;
-$nav-cells: #a5a58d;
+$buttons: #a5a58d;
 $footer: #a5a58d;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
