--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -3,18 +3,23 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
-
-
 .body {
   background-color:#f0efeb;
   text-align: center;
-  
-  .footer{
-    margin-top: 20px;
-    color:#1d3557;
-    background-color: $nav-cells;
-    position: relative;
-  }
+
+  .button {
+  border: 0;
+  border-radius: 10px;
+  background: $buttons;
+  font-family: -system-ui, sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.5rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
 
   li {  
     list-style: none;
