styling layout and information tweaks

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -8,7 +8,7 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #cc4b37,
 );
-$testing1: #fffb88;
+$testing: #88e3ff;
 $page: #f0efeb;
 $buttons: #a5a58d;
 $footer: #a5a58d;
