--- a/app/assets/stylesheets/brewshow.scss
+++ b/app/assets/stylesheets/brewshow.scss
@@ -1,80 +1,14 @@
 @import 'settings';
+@import 'colors';
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
-
-
- .brew-tile{
-  background-color: #adc178 ;
-  box-shadow: 1px 1px 5px 1px;
-  // padding: 1rem;
-  border-radius: 10px;
+.image {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 400px;
+  width: 400px;
 }
-// .portfolio-resume-scrolling-container {
-//   margin-top: 20px;
-//   height: 400px;
-//   border: 1px solid #cacaca;
-// }
 
-// .portfolio-resume-overview {
-//   height: 400px;
-//   display: -webkit-flex;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-align-items: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-//   -webkit-justify-content: center;
-//       -ms-flex-pack: center;
-//           justify-content: center;
-//   position: relative;
-//   opacity: 1;
-//   z-index: 0;
-// }
-
-// .portfolio-resume-overview:after {
-//   content: "";
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   background-image: url("https://placeimg.com/400/400/animals");
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   opacity: 0.3;
-//   z-index: 0;
-// }
-
-// .portfolio-resume-overview-content {
-//   max-width: 300px;
-//   z-index: 1;
-// }
-
-// .portfolio-resume-scrolling {
-//   padding-top: 10px;
-//   padding-bottom: 10px;
-// }
-
-// @media print, screen and (min-width: 40em) {
-//   .portfolio-resume-scrolling {
-//     height: 400px;
-//     overflow-y: auto;
-//   }
-// }
-
-
-// .work-feature-block {
-//   text-align: center;
-//   padding: 10px 0;
-//   border-top: 1px solid #cacaca;
-//   border-bottom: 1px solid #cacaca;
-// }
-
-// .work-feature-block-image {
-//   display: block;
-//   margin: auto;
-//   padding: 10px 0;
-// }
 
 
