--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -3,17 +3,6 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
-.square-box {
-  max-height: 700px;
-  margin: 1rem auto;
-  box-shadow: 1px 1px 10px 1px $black;
-  padding: 1rem;
-  border-radius: 10px;
-}
-
-
-@include breakpoint(small only) {
-  .square-box {
-    max-height: 100%;
-  }
+.top {
+  margin-bottom: 20px;
 }
