--- a/app/assets/stylesheets/testing.scss
+++ b/app/assets/stylesheets/testing.scss
@@ -1,5 +1,6 @@
 @import 'settings';
 @import 'foundation';
+@import 'colors';
 @import 'motion-ui/motion-ui';
 
 // .cell {
@@ -12,3 +13,12 @@
 //   // margin-top: 30px;
 //   // margin-bottom: 30px;
 // }
+
+.test-two {
+  background-color: $testing;
+}
+ .test {
+    background: #ddbea9;
+    color:#1d3557;
+    text-align: center;
+  }
