--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="body">
-  <header>
+  <header class="test">
     <div>
       <ul>
         <%- if current_user -%>
@@ -23,13 +23,13 @@
     </div>
     <nav>
       <ul>
-        <%- if current_user -%>
-          <%= link_to 'PROFILE', "/users/#{current_user.id}", class: "button"%> 
-        <%- end -%>
         <a class="nav-links" href="/"><button class="button"> HOME</button class="button"></a>
         <a class="nav-links" href="/brews"><button class="button"> BREWS</button class="button"></a>
         <a class="nav-links" href="/roasts"><button class="button">ROASTS</button class="button"></a>
         <a class="nav-links" href="/roasts/new"><button class="button">ADD A ROAST</button class="button"></a> 
+        <%- if current_user -%>
+          <%= link_to 'PROFILE', "/users/#{current_user.id}", class: "button"%> 
+        <%- end -%>
       </ul>
     </nav>
   </header>
