--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -6,3 +6,12 @@
 .top {
   margin-bottom: 20px;
 }
+
+.callout {
+  text-align: center;
+  opacity: 0;
+  border-radius: 5px;
+  background: white;
+  opacity: 1;
+  top: 0px;
+}
