added pavement scraper and some styling tweaks

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -38,6 +38,11 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+// We use this to control alert padding.
+
+
+
 // .alert {
 //   text-align: center;
 // }
