--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -2,6 +2,7 @@
 @import 'colors';
 @import 'foundation';
 @import 'motion-ui/motion-ui';
+@import 'font-awesome';
 
 .body {
   background-color:#f0efeb;
