--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -2,84 +2,49 @@
 @import 'colors';
 @import 'foundation';
 @import 'motion-ui/motion-ui';
+@import 'font-awesome';
 
 .top {
   margin-bottom: 20px;
 }
 
-// .callout {
-//   text-align: center;
-//   opacity: 0;
-//   border-radius: 5px;
-//   background: white;
-//   opacity: 1;
-//   top: 0px;
-// }
-.card-user-container {
+.page-columns {
+  margin-top: 20px;
+}
+.tile {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.fa {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.product-image-gallery {
+  // background-color: #fefefe;
+  padding: 1.5rem;
+}
+
+.pdp-product-image {
+  margin-bottom: 20px;
+}
+
+.product-thumbs a {
+  margin-left: 8px;
+  margin-right: 8px;
+  padding: 0 !important;
+}
+
+.product-thumbs a img {
+  display: inline-block;
+  max-width: 100%;
   margin-bottom: 1rem;
-  background-color: #fefefe;
-  color: #0a0a0a;
-  overflow: hidden;
-  padding: 0;
+  border: solid 4px #fefefe;
   border-radius: 0;
-}
-
-.card-user-container .card-user-avatar .user-image {
-  display: block;
-  margin: auto;
-  border-radius: 50%;
-  width: 11.875rem;
-  height: 11.875rem;
-  padding: 0.9375rem;
-}
-
-.card-user-container .card-user-avatar .user-image:hover {
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.card-user-container .card-user-bio {
-  padding: 1rem;
-  text-align: center;
-}
-
-.card-user-container .card-user-bio .location {
-  display: inline-block;
-  margin: 0 0.9375rem;
-  color: #767676;
-  font-size: 0.875rem;
-}
-
-.card-user-container .card-user-bio .location-icon,
-.card-user-container .card-user-bio .location-text {
-  display: inline-block;
-  padding: 0 0.3125rem;
-}
-
-.card-user-container .card-user-social {
-  background: #e6e6e6;
-  padding: 1rem;
-  text-align: center;
-}
-
-.card-user-container .card-user-social ul {
-  display: inline-block;
-}
-
-.card-user-container .card-user-social ul li {
-  margin: 0 10px;
-  font-size: 1.2em;
-  cursor: pointer;
-}
-
-.card-user-container .card-user-social ul li:hover {
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.card-user-container .card-user-button {
-  text-align: center;
-  padding: 1rem;
+  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  line-height: 0;
+  border-radius: 3px;
+  width: 50px;
+  height: 50px;
+  border: none;
 }
