--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
   <%= javascript_include_tag 'application' %>
   
-  <%- if Rails.env.development? || Rails.env.grid-x? -%> 
+  <%- if Rails.env.development? || Rails.env.test? -%> 
     <%= javascript_tag do %>
       window.railsEnv = '<%= Rails.env %>'
     <%- end -%>
@@ -55,12 +55,5 @@
   <%= javascript_pack_tag 'application' %>
   
   <%= yield :extra_footer %>
-  <%# <footer class="footer grid-container">
-    <div class="footer grid-x grid-margin-y grid-padding-x grid-padding-y">
-      <div class="footer small-12 large-12">
-        <p>Cup of Jo Pro</p>
-      </div>
-    </div>
-  </footer> %>
 </body>
 </html>
