additional styling and tweaks

--- a/app/assets/stylesheets/testing.scss
+++ b/app/assets/stylesheets/testing.scss
@@ -18,7 +18,7 @@
   background-color: $testing;
 }
  .test {
-    background: #ddbea9;
+    background: yellowgreen;
     color:#1d3557;
     text-align: center;
   }
