--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -3,12 +3,18 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 @import 'font-awesome';
+@import url("https://fonts.googleapis.com/css?family=Dosis|Titillium+Web");
 
 .body {
-  background-color:#f0efeb;
+  background-color: #f0efeb;
   text-align: center;
+  Font-Family: 'Dosis', Sans-Serif;
+  Font-Size: 48px;
+  Font-Family: 'Titillium Web', Sans-Serif;
+  Font-Size: 16px;
+}
 
-  .button {
+.button {
   border: 0;
   border-radius: 10px;
   background: $buttons;
@@ -17,174 +23,54 @@
   line-height: 1.2;
   white-space: nowrap;
   text-decoration: none;
-  padding: 0.5rem 0.5rem;
-  margin: 0.25rem;
+  padding: 0.2rem 0.2rem;
   cursor: pointer;
 }
 
-  li {  
-    list-style: none;
-  }
-  .test {
-    background: #ddbea9;
-    color:#1d3557;
-    text-align: center;
-  }
+.callout.shaded {
+  border-color: 2px solid $fa;
+  background-color: $buttons;
+  Font-Family: 'Dosis', Sans-Serif;
 }
 
-.box {
-  width: 300px;
-  height: 500px;
-  border: 1px solid #1d3557;;
-  margin-top: 20px;
-  margin-bottom: 20px;
+li {  
+  list-style: none;
 }
 
-// We use this to control alert padding.
+.test {
+  background: #ddbea9;
+  color:#1d3557;
+  text-align: center;
+}
 
+.button {
+  border: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border: 2px solid $fa;
+  background: $buttons;
+  font-family: -system-ui, sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: .75rem .75rem;
+  cursor: pointer;
 
+}
 
-// .alert {
-//   text-align: center;
-// }
-// .box {
-//   width: 300px;
-//   height: 500px;
-//   border: 1px solid black;
-//   padding: 50px;
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
-// // .square {
-// //     border: solid blue 1px;
-// //     padding-bottom: 30%;
+.title {
+  Font-Family: 'Dosis', Sans-Serif;
+  
+}
 
-// //     display: flex;                /* new */
-// //     justify-content: center;      /* new */
-// //     align-items: center;          /* new */
-// // }
-// .card {
-//   width: 350px;
-// }
-
-// .card-info {
-//   padding: 1rem;
-//   display: -ms-grid;
-//   display: grid;
-//   -ms-grid-rows: 1fr 2.5rem;
-//       grid-template-rows: 1fr 2.5rem;
-//   -ms-grid-columns: 3fr 1fr;
-//       grid-template-columns: 3fr 1fr;
-// }
-
-// .card-title {
-//   font-size: 2rem;
-//   grid-row: 1 / 2;
-//   grid-column: 1 / 2;
-// }
-
-// .card-icon {
-//   grid-row: 1 / 2;
-//   grid-column: 2 / 3;
-//   justify-self: right;
-//   width: 30px;
-//   height: 30px;
-//   background-color: LightBlue;
-//   border-radius: 100%;
-//   display: -ms-grid;
-//   display: grid;
-//   -ms-grid-column-align: center;
-//       justify-items: center;
-//   -webkit-align-items: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-// }
-
-// .card-author {
-//   grid-row: 2 / 3;
-//   grid-column: 1 / 2;
-//   -webkit-align-self: bottom;
-//       -ms-flex-item-align: bottom;
-//               -ms-grid-row-align: bottom;
-//           align-self: bottom;
-// }
-
-// .card-stats {
-//   -webkit-align-self: bottom;
-//       -ms-flex-item-align: bottom;
-//               -ms-grid-row-align: bottom;
-//           align-self: bottom;
-//   justify-self: right;
-// }
-
-
-// .work-feature-block {
-//   padding: 10px 0;
-//   border-top: 1px solid #cacaca;
-//   border-bottom: 1px solid #cacaca;
-// }
-
-// .work-feature-block-image {
-//   display: block;
-//   margin: auto;
-//   padding: 10px 0;
-// }
-
-
-
-// .body {
-//   background-color: #f0efeb;
-// }
-
-// li {
-//   list-style: none;
-// }
-
-// // .nav-links {
-// //   display: block;
-// // }
-// .roast-tile, .brew-tile, .user{
-//   background-color: #adc178 ;
-//   box-shadow: 1px 1px 5px 1px;
-//   padding: 1rem;
-//   border-radius: 10px;
-// }
-
-// // nav, h1, .user {
-// //   text-align: center;
-// // }
-
-// // .roast-tile {
-// //   border: solid black; 
-// // }
-
-// // .top-bar {
-// //   background-color: #adc178;
-// //   text-align: center;
-// // }
-
-// h4 {
-//   text-align: center;
-// }
-// .translucent-form-overlay {
-//   // max-width: 700px;
-//   // width: 100%;
-//   margin: 5rem 90px;
-//   background-color: rgba(173, 193, 120, 0.8);
-//   padding: 20px;
-//   color: #fefefe;
-// }
-
-// .translucent-form-overlay .columns.row {
-//   display: block;
-// }
-
-// .translucent-form-overlay h4, .translucent-form-overlay label {
-//   color: #fefefe;
-// }
-
-// .translucent-form-overlay input::-webkit-input-placeholder {
-//   color: #8a8a8a;
-// }
+a:hover {
+  background-color: $fa;
+  border-radius: 5px;
+}
+.bot{
+  margin-bottom: 10px;
+}
