--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -10,8 +10,11 @@ $foundation-palette: (
 );
 $testing: #88e3ff;
 $page: #f0efeb;
-$buttons: #a5a58d;
+$page2: #e8dcd5;
+$fa: #eb6534;
+$buttons: #39a2ae;
 $footer: #a5a58d;
+$nav: #39a2ae;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
