--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -11,15 +11,21 @@
 .page-columns {
   margin-top: 20px;
 }
+
 .tile {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  cursor: pointer;
+}
+
+.cafe {
+  border: 2px solid $fa;
 }
 
 .fa {
   margin-left: 20px;
   margin-right: 20px;
+  color: $fa;
 }
+
 .product-image-gallery {
   // background-color: #fefefe;
   padding: 1.5rem;
@@ -27,6 +33,7 @@
 
 .pdp-product-image {
   margin-bottom: 20px;
+  border-radius: 10px;
 }
 
 .product-thumbs a {
@@ -37,7 +44,7 @@
 
 .product-thumbs a img {
   display: inline-block;
-  max-width: 100%;
+  max-width: 50%;
   margin-bottom: 1rem;
   border: solid 4px #fefefe;
   border-radius: 0;
@@ -47,4 +54,12 @@
   width: 50px;
   height: 50px;
   border: none;
+}
+
+.square-box {
+  max-height: 700px;
+  margin: 1rem;
+  box-shadow: 1px 1px 10px 1px $page;
+  padding: 1rem;
+  border-radius: 10px;
 }
