--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,4 +8,18 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px;
+  background: $nav;
+}
+
+.nav-links {
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  color: white;
+  cursor: pointer;
+}
+
+:hover {
+  
 }
