--- a/app/assets/stylesheets/roast.scss
+++ b/app/assets/stylesheets/roast.scss
@@ -19,3 +19,13 @@
  .right {
    margin-left: 20px;
  }
+
+ .card-img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 200px;
+  width: 200px;
+  border-radius: 5px;
+  border: solid 5px;
+  border-color: #39a2ae;
+ }
