--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -15,6 +15,7 @@ $fa: #eb6534;
 $buttons: #39a2ae;
 $footer: #a5a58d;
 $nav: #39a2ae;
+$font: #5D4A4A;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
