--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -21,8 +21,8 @@
 }
 
 .fa {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
   color: $fa;
 }
 
@@ -62,4 +62,12 @@
   box-shadow: 1px 1px 10px 1px $page;
   padding: 1rem;
   border-radius: 10px;
+}
+
+.fa-a:hover {
+  background-color: $nav;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-top: 10px;
+  padding: 10px, 10px;
 }
