--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -3,11 +3,18 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
-header {
+.profile-photo {
+  border-radius: 10px;
+}
+
+.top-bar, .top-bar ul{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  background: $nav;
+}
+
+.title-bar {
   background: $nav;
 }
 
@@ -20,6 +27,25 @@ header {
   cursor: pointer;
 }
 
-:hover {
-  
+
+
+
+@media screen and (max-width: 39.9375em) {
+  .no-js .top-bar {
+    display: none;
+  }
+}
+
+@media print, screen and (min-width: 40em) {
+  .no-js .title-bar {
+    display: none;
+  }
+}
+
+[data-sticky] {
+  width: 100%;
+}
+
+.sticky-container {
+  z-index: 5;
 }
