--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,10 @@
           <ul>
             <a class="nav-links" href="/"><button class="nav-links"> Home</button></a>
             <a class="nav-links" href="/brews"><button class="nav-links"> Brews</button></a>
-            <a class="nav-links" href="/roasts"><button class="nav-links">roasts</button ></a>
+            <a class="nav-links" href="/roasts"><button class="nav-links">Roasts</button ></a>
             <a class="nav-links" href="/roasts/new"><button class="nav-links">Add a roast</button></a> 
             <%- if current_user -%>
-              <%= link_to 'profile', "/users/#{current_user.id}", class: "button"%> 
+              <%= link_to 'Profile', "/users/#{current_user.id}", class: "button"%> 
             <%- end -%>
           </ul>
         </nav>
