--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -19,7 +19,6 @@ li {
   list-style: none;
 }
 
-
 .button {
   border: 0;
   margin-top: 5px;
@@ -38,8 +37,10 @@ li {
 
 .title {
   Font-Family: 'Dosis', Sans-Serif;
+  color: $font;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
-
 
 .forgot-link{
   color: $nav;
@@ -71,4 +72,31 @@ a:hover {
   color: white;
   margin-top: 5px;
   padding: .25rem .5rem;
+}
+
+.alert {
+  padding: 20px;
+  background-color: #eb6534;
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.alert.success {background-color: #4CAF50;}
+.alert.info {background-color: #2196F3;}
+.alert.warning {background-color: #ff9800;}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
 }
