--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -12,10 +12,12 @@ $testing: #88e3ff;
 $page: #f0efeb;
 $page2: #e8dcd5;
 $fa: #eb6534;
+$user-top-bar: #eb6534;
 $buttons: #39a2ae;
 $footer: #a5a58d;
 $nav: #39a2ae;
 $font: #5D4A4A;
+$user-brown :#5D4A4A;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
