--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -26,15 +26,15 @@
   color: $fa;
 }
 
-.product-image-gallery {
-  // background-color: #fefefe;
-  padding: 1.5rem;
-}
+// .product-image-gallery {
+//   // background-color: #fefefe;
+//   padding: 1.5rem;
+// }
 
-.pdp-product-image {
-  margin-bottom: 20px;
-  border-radius: 10px;
-}
+// .pdp-product-image {
+//   margin-bottom: 20px;
+//   border-radius: 10px;
+// }
 
 .product-thumbs a {
   margin-left: 8px;
