--- a/app/assets/stylesheets/roast.scss
+++ b/app/assets/stylesheets/roast.scss
@@ -30,8 +30,10 @@
   color: $font;
 }
 .roast-tile-title{
-   color: $font;
-   font-size: 12px;
+  color: $font;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
  .card-img {
   height: 100px;
@@ -42,11 +44,10 @@
  }
 
 .button-like {
+  margin-bottom: 10px;
   background-color: transparent;
   text-decoration: none;
-  // vertical-align: middle;
   text-align: center;
-  // display: inline-block;
   border-radius: 3rem;
   color: #8a8a8a;
   transition: all ease 0.4s;
