--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -17,6 +17,20 @@
   color: #5D4A4A;
 }
 
-.method-title {
+.method-title, .roast-title {
   margin-bottom: 20px;
+}
+
+.roast-form {
+  // margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+ .right {
+   margin-left: 20px;
+ }
+
+.brew-form {
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
