--- a/app/assets/stylesheets/roast.scss
+++ b/app/assets/stylesheets/roast.scss
@@ -3,24 +3,6 @@
 @import 'foundation';
 @import 'motion-ui/motion-ui';
 
-//Roast form
-.roast-form {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.roast-grid {
-  margin-top: 20px;
-}
-
- .callout.roast {
-   margin: 20px;
-   padding: 20px;
- }
-
- .right {
-   margin-left: 20px;
- }
 
 // ROASTS INDEX PAGE
 
@@ -37,10 +19,9 @@
 }
  .card-img {
   height: 100px;
-  width: 100px;
+  width: 200px;
+  margin-bottom: 5px;
   border-radius: 5px;
-  border: solid 5px;
-  border-color: #39a2ae;
  }
 
 .button-like {
@@ -162,5 +143,9 @@
   display: inline-block;
   height: 25px;
   width: 25px;
+}
+
+.roast-a {
+  color: $font;
 }
 
