--- a/app/assets/stylesheets/usershow.scss
+++ b/app/assets/stylesheets/usershow.scss
@@ -58,6 +58,7 @@
 .article-row-section-inner {
   Font-Family: 'Dosis', Sans-Serif;
   color: $font;
+  font-size: 16px;
   -webkit-flex: 0 0 100%;
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
