--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,11 @@
         <div class="">
           <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
             <%- if current_user -%>
-              <li>
-                <%= image_tag current_user.profile_photo.url(:thumb), class: "profile-photo" %>
-              </li> 
+              <li><%= image_tag current_user.profile_photo.url(:thumb), class: "profile-photo" %></li> 
               <li ><%= link_to 'Sign Out', destroy_user_session_path, class: "button", method: :delete %></li>
             <%- else -%>
               <li><%= link_to 'Sign Up', new_user_registration_path, class: "button" %></li>
-              <li><%= link_to 'Sign In', new_user_session_path, class: "button" %></li>
+              <li><%  = link_to 'Sign In', new_user_session_path, class: "button" %></li>
             <%- end -%>
           </ul>
         </div>
