added search form page and started front end error handling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
         <nav>
           <ul>
             <a class="nav-links" href="/"><button class="nav-links"> Home</button></a>
+            <a class="nav-links" href="/search"><button class="nav-links"> Find Coffee</button></a>
             <a class="nav-links" href="/brews"><button class="nav-links"> Brews</button></a>
             <a class="nav-links" href="/roasts"><button class="nav-links">Roasts</button ></a>
             <%- if current_user -%>
