--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -15,7 +15,6 @@
   Font-Size: 16px;
 }
 
-
 li {  
   list-style: none;
 }
@@ -78,9 +77,11 @@ a:hover {
  margin-top: 10px;
  padding: 2px 10px;
 }
+
 .forgot-link {
   margin-top: 10px;
 }
+
 .forgot-link:hover {
   background-color: $nav;
   border-radius: 10px;
@@ -115,4 +116,26 @@ a:hover {
 
 .closebtn:hover {
   color: black;
+}
+
+.profile-button {
+  border: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 10px;
+  font-size: 16px;
+  color: white;
+  background: $user-brown;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: .75rem .75rem;
+  cursor: pointer;
+}
+
+.profile-button:hover {
+  background-color: $dark-gray;
+  padding: .75rem .75rem;
+  border-radius: 10px;
 }
