css folder updates and react css clean up

--- a/app/assets/stylesheets/components/navigation/navbar.scss
+++ b/app/assets/stylesheets/components/navigation/navbar.scss
@@ -1,7 +1,5 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'motion-ui/motion-ui';
+@import "abstracts/variables";
+
 
 .profile-photo {
   margin: 10px;
