--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require foundation_and_overrides
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
-
+ 
+ @import "/app/assets/stylesheets/main.scss" 
