--- a/app/assets/stylesheets/components/images/images.scss
+++ b/app/assets/stylesheets/components/images/images.scss
@@ -1,7 +1,5 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'motion-ui/motion-ui';
+@import "abstracts/variables";
+
 
 .product-image-gallery {
   padding: 1.5rem;
