--- a/app/assets/stylesheets/components/pages/brew.scss
+++ b/app/assets/stylesheets/components/pages/brew.scss
@@ -1,21 +1,18 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'motion-ui/motion-ui';
+@import "abstracts/variables";
 
 //brew container css
 .brew-title {
-  margin-top: 30px;
-  color: $font;
+  // margin-top: 30px;
+  // color: $font;
 }
 
 
 //brew tile css
 .user {
-  color: $user-brown;
-  border-radius: 3px;
-  font-weight: 600;  
-  font-size: large;
+  // color: $user-brown;
+  // border-radius: 3px;
+  // font-weight: 600;  
+  // font-size: large;
 }
 
 //brew show css
