--- a/app/assets/stylesheets/components/pages/forms.scss
+++ b/app/assets/stylesheets/components/pages/forms.scss
@@ -1,7 +1,4 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'motion-ui/motion-ui';
+@import "abstracts/variables";
 
 .translucent-form-overlay {
   width: 100%;
