--- a/app/assets/stylesheets/components/pages/landingpage.scss
+++ b/app/assets/stylesheets/components/pages/landingpage.scss
@@ -1,7 +1,5 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'font-awesome';
+@import "abstracts/variables";
+
 
 .top {
   margin-bottom: 20px;
