--- a/app/assets/stylesheets/components/pages/roast.scss
+++ b/app/assets/stylesheets/components/pages/roast.scss
@@ -1,8 +1,5 @@
-@import 'settings';
-@import 'colors';
-@import 'foundation';
-@import 'motion-ui/motion-ui';
 
+@import "abstracts/variables";
 
 // ROASTS INDEX PAGE
 
