--- a/app/assets/stylesheets/components/pages/usershow.scss
+++ b/app/assets/stylesheets/components/pages/usershow.scss
@@ -1,7 +1,5 @@
-@import 'settings';
-@import 'foundation';
-@import 'colors';
-@import 'motion-ui/motion-ui';
+@import "abstracts/variables";
+
 
 .user-top-bar {
   color: $page;
