--- a/app/assets/stylesheets/components/pages/forms.scss
+++ b/app/assets/stylesheets/components/pages/forms.scss
@@ -1,25 +1,14 @@
 @import "abstracts/variables";
 
 .translucent-form-overlay {
-  width: 100%;
   background-color: rgba(88, 123, 127, 0.1);
   padding: 20px;
   border-radius: 15px;
   color: #5D4A4A;
-}
-
-.field {
-  font-size: medium;
-  font-weight: 500;
-  color: #5D4A4A;
+  text-align: center;
 }
 
 .method-title, .roast-title {
-  margin-bottom: 20px;
-}
-
-.roast-form {
-  // margin-top: 20px;
   margin-bottom: 20px;
 }
 
