--- a/app/assets/stylesheets/components/pages/roast.scss
+++ b/app/assets/stylesheets/components/pages/roast.scss
@@ -1,22 +1,20 @@
-
+@import 'font-awesome';
 @import "abstracts/variables";
 
 // ROASTS INDEX PAGE
 
+.roast-header {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
 .roast-title {
-  margin-top: 30px;
-  margin-bottom: 40px;
-  color: $font;
+  margin-bottom: 5px;  
 }
-.roast-tile-title{
-  color: $font;
-  font-size: 12px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
+
  .card-img {
   height: 100px;
-  width: 200px;
+  width: 100px;
   margin-bottom: 5px;
   border-radius: 5px;
  }
