--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,44 +9,31 @@
 </head>
 <body>
   <div data-sticky-container>
-    <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%">
-      <div>
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li>
-            <a class="nav-links" href="#">Menu</a>
-            <ul class="menu">
-              <li><%= link_to "Home", "/", class: "nav-links" %></li>
-              <li><%= link_to "Find a Shop", "/search", class: "nav-links" %></li>
-              <li><%= link_to "Brews", "/brews", class: "nav-links" %></li>
-              <li><%= link_to "Roasts", "/roasts", class: "nav-links" %></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <%- if current_user -%>
-        <div>
-          <%= image_tag current_user.profile_photo.url(:thumb), class: "profile-photo" %>
+      <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1">
+      <div class="title-bar-left">
+        <div class="menu">
+          <%= link_to "Home", "/", class: "nav-links" %>
+          <%= link_to "Find a Shop", "/search", class: "nav-links" %>
+          <%= link_to "Brews", "/brews", class: "nav-links" %>
+          <%= link_to "Roasts", "/roasts", class: "nav-links" %>
         </div>
-      <%- end -%>
-      <div>
-        <ul class="dropdown menu" data-dropdown-menu >
-          <li>
-            <%- if current_user -%>
-              <a class="nav-links" href="#">Account</a>
-              <ul class="menu">            
-                <li><%= link_to 'Profile', "/users/#{current_user.id}", class: "nav-links"%></li>  
-                <li><%= link_to "Add a Roast", "/roasts/new", class: "nav-links" %></li> 
-                <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-links", method: :delete %></>
-              </ul>
-            <%- else -%>
-              <a class="nav-links" href="#">Account</a>
-              <ul class="menu">            
-                <%= link_to 'Log In', new_user_session_path, class: "nav-links" %>
-              </ul>
-            <%- end -%>
-          </li>
-        </ul>
       </div>
+      <div>
+        <%- if current_user -%>
+          <%= image_tag current_user.profile_photo.url(:thumb), class: "profile-photo" %>
+        <%- end -%>
+      </div>
+      <div class="title-bar-right">
+        <div>
+          <%- if current_user -%>
+            <%= link_to 'Profile', "/users/#{current_user.id}", class: "nav-links"%>
+            <%= link_to "Add a Roast", "/roasts/new", class: "nav-links" %>
+            <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-links", method: :delete %>
+          <%- else -%>
+            <%= link_to 'Log In', new_user_session_path, class: "nav-links" %>
+          <%- end -%>
+        </div>
+      </div>      
     </div>
   </div>
 
