fixed modal for edit & add method on profile

--- a/app/assets/stylesheets/components/ui/modal/modal.scss
+++ b/app/assets/stylesheets/components/ui/modal/modal.scss
@@ -1,13 +1,11 @@
 .modal {
+  position: sticky;
   z-index: 500;
   background-color: white;
-  width: 70%;
+  width: auto;
   border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
   padding: 16px;
   top: 30%;
-  box-sizing: border-box;
-  transition: all 0.3s ease-out;
 }
 
 .modalOpen {
